a big SanitizeGC test refactoring, added new tests, edited the old ones and created a directory for benchmarks and tests that should fail